--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -5,11 +5,23 @@
   <title>KumbiaPHP web &amp; App Framework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- CDN de Bootstrap y Font-awesome -->
+  <!-- CDN for Bootstrap & Font-awesome -->
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet">
+  <!--[if IE 7]>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome-ie7.min.css" rel="stylesheet">
+  <![endif]-->
   <?php Tag::css('bienvenida'); ?>
   <?php echo Html::includeCss() ?>
+
+  <!-- CDN for jQuery, Bootstrap & Google Charts -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
 <body>
     <div class='container'>
